// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Component snapshots should match snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  background-color: #ffffff;
  outline: none;
  color: #2d3b43;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  text-overflow: ellipsis;
  cursor: text;
}

.c0::-webkit-input-placeholder {
  color: #949ea3;
}

.c0::-moz-placeholder {
  color: #949ea3;
}

.c0:-ms-input-placeholder {
  color: #949ea3;
}

.c0::placeholder {
  color: #949ea3;
}

.c0:focus {
  -webkit-transition: 0.2s linear;
  transition: 0.2s linear;
  border-color: #146292;
  box-shadow: 0 0 2px #146292 inset;
}

<Input__StyledInput
  onChange={[Function]}
  placeholder="Empty state"
  type="text"
  value=""
>
  <input
    className="c0"
    onChange={[Function]}
    placeholder="Empty state"
    type="text"
    value=""
  />
</Input__StyledInput>
`;

exports[`Input Component snapshots should match snapshot 2`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  background-color: #ffffff;
  outline: none;
  color: #2d3b43;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  text-overflow: ellipsis;
  cursor: text;
}

.c0::-webkit-input-placeholder {
  color: #949ea3;
}

.c0::-moz-placeholder {
  color: #949ea3;
}

.c0:-ms-input-placeholder {
  color: #949ea3;
}

.c0::placeholder {
  color: #949ea3;
}

.c0:focus {
  -webkit-transition: 0.2s linear;
  transition: 0.2s linear;
  border-color: #146292;
  box-shadow: 0 0 2px #146292 inset;
}

<Input__StyledInput
  onChange={[Function]}
  type="text"
  value="Some text"
>
  <input
    className="c0"
    onChange={[Function]}
    type="text"
    value="Some text"
  />
</Input__StyledInput>
`;

exports[`Input Component snapshots should match snapshot 3`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px #e4e8ea;
  border-radius: 0.25rem;
  background-color: #e4e8ea;
  outline: none;
  color: #949ea3;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  text-overflow: ellipsis;
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: #949ea3;
}

.c0::-moz-placeholder {
  color: #949ea3;
}

.c0:-ms-input-placeholder {
  color: #949ea3;
}

.c0::placeholder {
  color: #949ea3;
}

.c0:focus {
  -webkit-transition: 0.2s linear;
  transition: 0.2s linear;
  border-color: #146292;
  box-shadow: 0 0 2px #146292 inset;
}

<Input__StyledInput
  disabled={true}
  placeholder="This input is disabled"
  type="text"
>
  <input
    className="c0"
    disabled={true}
    placeholder="This input is disabled"
    type="text"
  />
</Input__StyledInput>
`;

exports[`Input Component snapshots should match snapshot 4`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  background-color: #ffffff;
  outline: none;
  color: #2d3b43;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  text-overflow: ellipsis;
  cursor: text;
  border-color: #e05f6e;
}

.c0::-webkit-input-placeholder {
  color: #949ea3;
}

.c0::-moz-placeholder {
  color: #949ea3;
}

.c0:-ms-input-placeholder {
  color: #949ea3;
}

.c0::placeholder {
  color: #949ea3;
}

.c0:focus {
  -webkit-transition: 0.2s linear;
  transition: 0.2s linear;
  border-color: #146292;
  box-shadow: 0 0 2px #146292 inset;
}

.c0:focus {
  border-color: #e05f6e;
  box-shadow: 0 0 2px #e05f6e inset;
}

<Input__StyledInput
  invalid={true}
  onChange={[Function]}
  placeholder="You could type something here"
  type="text"
  value="invalid value"
>
  <input
    className="c0"
    onChange={[Function]}
    placeholder="You could type something here"
    type="text"
    value="invalid value"
  />
</Input__StyledInput>
`;

exports[`Input Component snapshots should match snapshot 5`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  padding-left: calc(0.5714285714285714rem - 1px);
  padding-right: calc(0.5714285714285714rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px #d2d9dd;
  border-radius: 0.25rem;
  background-color: #ffffff;
  outline: none;
  color: #2d3b43;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  text-overflow: ellipsis;
  cursor: text;
}

.c0::-webkit-input-placeholder {
  color: #949ea3;
}

.c0::-moz-placeholder {
  color: #949ea3;
}

.c0:-ms-input-placeholder {
  color: #949ea3;
}

.c0::placeholder {
  color: #949ea3;
}

.c0:focus {
  -webkit-transition: 0.2s linear;
  transition: 0.2s linear;
  border-color: #146292;
  box-shadow: 0 0 2px #146292 inset;
}

<Input__StyledInput
  placeholder="You could type something here"
  type="text"
>
  <input
    className="c0"
    placeholder="You could type something here"
    type="text"
  />
</Input__StyledInput>
`;
